force-app/main/default/objects/Solution_Provider__c/Solution_Provider__c.object-meta.xml
<CustomObject>
    <description>A company that provides service(s) that are integral to how our digital banking offerings operate.</description>
    <label>Solution Provider Account</label>
    <nameField>
        <label>Solution Provider Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Solution Provider Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>