force-app/main/default/objects/Solution_Provider__c/fields/Address_1__c.field-meta.xml
<CustomField>
    <fullName>Address_1__c</fullName>
    <description>Main address on a SP</description>
    <label>Address1</label>
    <type>TextArea</type>
</CustomField>