force-app/main/default/objects/Solution_Provider__c/fields/Address_2__c.field-meta.xml
<CustomField>
    <fullName>Address_2__c</fullName>
    <description>Main address on a SP</description>
    <label>Address2</label>
    <type>TextArea</type>
</CustomField>