force-app/main/default/objects/Solution_Provider__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Conglomerate</fullName>
            </value>
            <value>
                <fullName>Solution Provider</fullName>
            </value>
            <value>
                <fullName>Service Bureau</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>