force-app/main/default/objects/Solution_Provider__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Solution Provider&apos;s Country</description>
    <label>Country</label>
    <length>100</length>
    <type>Text</type>
</CustomField>