force-app/main/default/objects/Solution_Provider__c/fields/DPV_Product_Count__c.field-meta.xml
<CustomField>
    <fullName>DPV_Product_Count__c</fullName>
    <description>The number of DPV products that a Solution Provider offers</description>
    <inlineHelpText>The number of DPV products that a Solution Provider offers</inlineHelpText>
    <label>DPV Product Count</label>
    <summaryFilterItems>
        <field>Solution_Provider_Product__c.Product_Type__c</field>
        <operation>equals</operation>
        <value>Core Processing Vendor</value>
    </summaryFilterItems>
    <summaryForeignKey>Solution_Provider_Product__c.Solution_Provider_Id__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>