force-app/main/default/objects/Solution_Provider__c/fields/Fax__c.field-meta.xml
<CustomField>
    <fullName>Fax__c</fullName>
    <description>Full fax number for Solution Provider</description>
    <label>Fax</label>
    <type>Phone</type>
</CustomField>