force-app/main/default/objects/Solution_Provider__c/fields/Parent_Solution_Provider_Id__c.field-meta.xml
<CustomField>
    <fullName>Parent_Solution_Provider_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to set up a conglomerate - aka &quot;Parent&quot; company</description>
    <label>Parent Solution Provider</label>
    <referenceTo>Solution_Provider__c</referenceTo>
    <relationshipName>Solution_Provider</relationshipName>
    <type>Lookup</type>
</CustomField>