force-app/main/default/objects/Solution_Provider__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Contact number for Solution Provider</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>