force-app/main/default/objects/Solution_Provider__c/fields/Pivotal_Vendor_ID__c.field-meta.xml
<CustomField>
    <fullName>Pivotal_Vendor_ID__c</fullName>
    <externalId>true</externalId>
    <label>Pivotal Vendor ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>