force-app/main/default/objects/Solution_Provider__c/fields/Search_Term__c.field-meta.xml
<CustomField>
    <fullName>Search_Term__c</fullName>
    <defaultValue>&quot;All&quot;</defaultValue>
    <description>A hidden field that allows the &quot;All&quot; search term to display all records for a Filtered Lookup</description>
    <label>Search Term</label>
    <length>25</length>
    <type>Text</type>
</CustomField>