force-app/main/default/objects/Solution_Provider__c/fields/Solution_Provider_Number__c.field-meta.xml
<CustomField>
    <fullName>Solution_Provider_Number__c</fullName>
    <description>V-prefixed four digit identification number - user friendly &quot;ID&quot; of Solution Provider</description>
    <label>Solution Provider Number</label>
    <length>6</length>
    <type>Text</type>
</CustomField>