force-app/main/default/objects/Solution_Provider__c/fields/Website__c.field-meta.xml
<CustomField>
    <fullName>Website__c</fullName>
    <description>Solution Provider&apos;s website url</description>
    <label>Website</label>
    <type>Url</type>
</CustomField>