force-app/main/default/objects/Solution_Provider__c/recordTypes/Service_Bureau.recordType-meta.xml
<RecordType>
    <fullName>Service_Bureau</fullName>
    <active>true</active>
    <label>Service Bureau</label>
</RecordType>