force-app/main/default/objects/Solution_Provider__c/recordTypes/Standard.recordType-meta.xml
<RecordType>
    <fullName>Standard</fullName>
    <active>true</active>
    <description>A vendor that is not a Service Bureau type</description>
    <label>Standard</label>
</RecordType>